fix samsung dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,6 +32,10 @@
   }
 }
 
+:root {
+  color-scheme: only light;
+}
+
 .grecaptcha-badge {
   visibility: hidden;
 }
